<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd;">
  <modelVersion>4.0.0</modelVersion>

  <groupId>uk.gov.defra.tracesx</groupId>
  <artifactId>spring-boot-parent</artifactId>
  <version>2.0.28-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>TracesX-Spring-Boot-Parent</name>
  <url>http://maven.apache.org</url>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.9.RELEASE</version>
  </parent>

  <distributionManagement>
    <repository>
      <id>release</id>
      <name>Releases</name>
      <url>${repo.releases.url}</url>
    </repository>
  </distributionManagement>

  <scm>
    <connection>scm:git:https://giteux.azure.defra.cloud/imports/spring-boot-parent.git</connection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.scm.id>gitlab</project.scm.id>

    <java.version>11</java.version>

    <tracesx.common.version>2.0.3</tracesx.common.version>
    <tracesx.common.security.version>2.0.3</tracesx.common.security.version>
    <tracesx.notification.schema.version>1.0.60</tracesx.notification.schema.version>

    <!-- Spring Boot dependency version overrides -->
    <jackson.version>2.10.1</jackson.version>
    <netty.version>4.1.42.Final</netty.version>
    <!-- End Spring Boot dependency version overrides -->

    <adal4j.version>1.6.4</adal4j.version>
    <applicationinsights.version>2.5.0</applicationinsights.version>
    <azure.springboot.metricsstarter.version>2.1.7</azure.springboot.metricsstarter.version>
    <azure.applicationinsights.springboot.starter.version>2.5.0</azure.applicationinsights.springboot.starter.version>
    <azure.version>2.2.0</azure.version>
    <commons.beanutils.version>1.9.4</commons.beanutils.version>
    <com.mashape.unirest.version>1.4.9</com.mashape.unirest.version>
    <equalsverifier.version>2.4.8</equalsverifier.version>
    <guava.version>24.1.1-jre</guava.version>
    <io.micrometer.micrometer-core.version>1.1.2</io.micrometer.micrometer-core.version>
    <jacoco.maven.plugin.version>0.8.2</jacoco.maven.plugin.version>
    <jjwt.version>0.10.5</jjwt.version>
    <json.patch.version>1.9</json.patch.version>
    <json-schema-java7.version>1.4.1</json-schema-java7.version>
    <junit.jupiter.version>5.0.2</junit.jupiter.version>
    <jwks-rsa.version>0.3.0</jwks-rsa.version>
    <maven.checkstyle.version>3.0.0</maven.checkstyle.version>
    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
    <mockito.version>2.28.2</mockito.version>
    <mssql.jdbc.version>7.4.1.jre11</mssql.jdbc.version>
    <neovisionaries.version>1.22</neovisionaries.version>
    <org.everit.json.schema.version>1.9.1</org.everit.json.schema.version>
    <org.owasp.encoder.version>1.2.2</org.owasp.encoder.version>
    <owasp.version>5.2.2</owasp.version>
    <spring.security.jwt.version>1.0.10.RELEASE</spring.security.jwt.version>
    <surefire.junit4.version>2.22.0</surefire.junit4.version>
    <testng.version>6.14.3</testng.version>
    <client.runtime.version>1.6.15</client.runtime.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>TracesX-SpringBoot-Common-Azure</artifactId>
        <version>${tracesx.common.version}</version>
      </dependency>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>TracesX-SpringBoot-Common-Health</artifactId>
        <version>${tracesx.common.version}</version>
      </dependency>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>TracesX-SpringBoot-Common-Event</artifactId>
        <version>${tracesx.common.version}</version>
      </dependency>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>TracesX-SpringBoot-CommonSecurity-Config</artifactId>
        <version>${tracesx.common.security.version}</version>
      </dependency>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>notification-schema-core</artifactId>
        <version>${tracesx.notification.schema.version}</version>
      </dependency>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>notification-schema-java</artifactId>
        <version>${tracesx.notification.schema.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-jwt</artifactId>
        <version>${spring.security.jwt.version}</version>
      </dependency>
      <dependency>
        <groupId>com.auth0</groupId>
        <artifactId>jwks-rsa</artifactId>
        <version>${jwks-rsa.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>${commons.beanutils.version}</version>
      </dependency>
      <dependency>
        <groupId>io.micrometer</groupId>
        <artifactId>micrometer-core</artifactId>
        <version>${io.micrometer.micrometer-core.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>azure-spring-boot-bom</artifactId>
        <version>${azure.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>azure-spring-boot-metrics-starter</artifactId>
        <version>${azure.springboot.metricsstarter.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>applicationinsights-spring-boot-starter</artifactId>
        <version>${azure.applicationinsights.springboot.starter.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>applicationinsights-web</artifactId>
        <version>${applicationinsights.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>applicationinsights-logging-logback</artifactId>
        <version>${applicationinsights.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>adal4j</artifactId>
        <version>${adal4j.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.rest</groupId>
        <artifactId>client-runtime</artifactId>
        <version>${client.runtime.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.fge</groupId>
        <artifactId>json-patch</artifactId>
        <version>${json.patch.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.everit-org.json-schema</groupId>
        <artifactId>org.everit.json.schema</artifactId>
        <version>${org.everit.json.schema.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.sqlserver</groupId>
        <artifactId>mssql-jdbc</artifactId>
        <version>${mssql.jdbc.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit.jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.surefire</groupId>
        <artifactId>surefire-junit4</artifactId>
        <version>${surefire.junit4.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.jqno.equalsverifier</groupId>
        <artifactId>equalsverifier</artifactId>
        <version>${equalsverifier.version}</version>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>${h2.version}</version>
      </dependency>
      <dependency>
        <groupId>com.doctusoft</groupId>
        <artifactId>json-schema-java7</artifactId>
        <version>${json-schema-java7.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neovisionaries</groupId>
        <artifactId>nv-i18n</artifactId>
        <version>${neovisionaries.version}</version>
      </dependency>
      <dependency>
        <groupId>com.mashape.unirest</groupId>
        <artifactId>unirest-java</artifactId>
        <version>${com.mashape.unirest.version}</version>
      </dependency>
      <dependency>
        <groupId>org.owasp.encoder</groupId>
        <artifactId>encoder</artifactId>
        <version>${org.owasp.encoder.version}</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt-api</artifactId>
        <version>${jjwt.version}</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt-impl</artifactId>
        <version>${jjwt.version}</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt-jackson</artifactId>
        <version>${jjwt.version}</version>
      </dependency>
      <dependency>
        <groupId>org.testng</groupId>
        <artifactId>testng</artifactId>
        <version>${testng.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>uk.gov.defra.tracesx</groupId>
      <artifactId>TracesX-SpringBoot-CommonSecurity-Config</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web-services</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>azure-spring-boot-metrics-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>applicationinsights-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>applicationinsights-web</artifactId>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>applicationinsights-logging-logback</artifactId>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>adal4j</artifactId>
    </dependency>
    <dependency>
      <groupId>com.microsoft.rest</groupId>
      <artifactId>client-runtime</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpasyncclient</artifactId>
    </dependency>
    <dependency>
      <groupId>com.github.fge</groupId>
      <artifactId>json-patch</artifactId>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <type>jar</type>
    </dependency>
    <!-- TODO: IMTS-4606 It would be nice to have a separate persistence parent -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>com.microsoft.sqlserver</groupId>
      <artifactId>mssql-jdbc</artifactId>
    </dependency>
    <!-- END TODO -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.vaadin.external.google</groupId>
          <artifactId>android-json</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.surefire</groupId>
      <artifactId>surefire-junit4</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>nl.jqno.equalsverifier</groupId>
      <artifactId>equalsverifier</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-java8</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>${maven-release-plugin.version}</version>
          <configuration>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <tagNameFormat>@{project.version}-${env.BUILD_NUMBER}</tagNameFormat>
            <releaseProfiles>release</releaseProfiles>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <argLine>
              ${argLine} --illegal-access=permit
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <configuration>
            <fork>true</fork>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
            <execution>
              <id>default-cli</id>
              <configuration>
                <jvmArguments>-Dspring.config.additional-location=file:.</jvmArguments>
                <profiles>
                  <profile>default</profile>
                  <profile>local</profile>
                </profiles>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco.maven.plugin.version}</version>
          <configuration>
            <excludes>
              <exclude>**/traceswsns/**/*</exclude>
            </excludes>
          </configuration>
          <executions>
            <execution>
              <id>default-prepare-agent</id>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>default-check</id>
              <goals>
                <goal>check</goal>
              </goals>
              <configuration>
                <rules>
                  <rule implementation="org.jacoco.maven.RuleConfiguration">
                    <element>BUNDLE</element>
                    <limits>
                      <limit implementation="org.jacoco.report.check.Limit">
                        <counter>LINE</counter>
                        <value>COVEREDRATIO</value>
                      </limit>
                    </limits>
                  </rule>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>${owasp.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
          <dependencies>
            <dependency>
              <groupId>org.owasp</groupId>
              <artifactId>dependency-check-maven</artifactId>
              <version>${owasp.version}</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <configuration>
            <useDefaultDelimiters>true</useDefaultDelimiters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${maven.checkstyle.version}</version>
          <configuration>
            <configLocation>google_checks.xml</configLocation>
            <logViolationsToConsole>true</logViolationsToConsole>
            <outputFile>${project.build.directory}/checkstyle-result.xml</outputFile>
            <violationSeverity>warning</violationSeverity>
            <failsOnError>true</failsOnError>
            <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
            <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
